# opencvdnn

./: CMakeLists.txt  CMakePresets.json  main.cpp
